--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,22 @@
-bidict==0.22.1
-blinker==1.6.2
-click==8.1.3
-colorama==0.4.6
-EasyProcess==1.1
-entrypoint2==1.1
 Flask==2.3.2
 Flask-SocketIO==5.3.4
-importlib-metadata==6.7.0
-itsdangerous==2.1.2
-Jinja2==3.1.2
-MarkupSafe==2.1.3
-MouseInfo==0.1.3
-mss==9.0.1
-Pillow==9.5.0
+jsonify==0.5
+Pillow==10.0.0
 plyer==2.1.0
+psutil==5.9.5
 PyAutoGUI==0.9.54
 PyGetWindow==0.0.9
 PyMsgBox==1.0.9
 pyperclip==1.8.2
-PyRect==0.2.0
-pyscreenshot==3.1
-PyScreeze==0.1.29
+pyserial==3.5
+pyserial-asyncio==0.6
 pystray==0.19.4
 python-engineio==4.5.1
 python-socketio==5.8.0
-pytweening==1.0.7
-six==1.16.0
+pyusb==1.2.1
+requests==2.31.0
+simple-websocket==0.10.1
+websocket==0.2.1
+websockets==11.0.3
 Werkzeug==2.3.6
-zipp==3.15.0
+winotify==1.1.0
